--- a/src/pages/blog/first-post.mdx
+++ b/src/pages/blog/first-post.mdx
@@ -2,7 +2,7 @@
 layout: ../../layouts/BlogLayout.astro
 title: Creating a Modern React Component with TypeScript
 date: April 16, 2025
-tags: ["React", "TypeScript", "Frontend"]
+tags: ['React', 'TypeScript', 'Frontend']
 excerpt: Learn how to create a modern, type-safe React component using TypeScript, hooks, and best practices.
 ---
 
@@ -18,27 +18,23 @@ Let's start with a basic TypeScript React component:
 import React from 'react';
 
 type ButtonProps = {
-  label: string;
-  onClick: () => void;
-  variant?: 'primary' | 'secondary' | 'danger';
-  disabled?: boolean;
+	label: string;
+	onClick: () => void;
+	variant?: 'primary' | 'secondary' | 'danger';
+	disabled?: boolean;
 };
 
 const Button: React.FC<ButtonProps> = ({
-  label,
-  onClick,
-  variant = 'primary',
-  disabled = false,
+	label,
+	onClick,
+	variant = 'primary',
+	disabled = false
 }) => {
-  return (
-    <button
-      className={`button button--${variant}`}
-      onClick={onClick}
-      disabled={disabled}
-    >
-      {label}
-    </button>
-  );
+	return (
+		<button className={`button button--${variant}`} onClick={onClick} disabled={disabled}>
+			{label}
+		</button>
+	);
 };
 
 export default Button;
@@ -52,38 +48,38 @@ Now let's enhance our component with some state using React hooks:
 import React, { useState } from 'react';
 
 type ButtonProps = {
-  label: string;
-  onClick: () => void;
-  variant?: 'primary' | 'secondary' | 'danger';
-  disabled?: boolean;
+	label: string;
+	onClick: () => void;
+	variant?: 'primary' | 'secondary' | 'danger';
+	disabled?: boolean;
 };
 
 const Button: React.FC<ButtonProps> = ({
-  label,
-  onClick,
-  variant = 'primary',
-  disabled = false,
+	label,
+	onClick,
+	variant = 'primary',
+	disabled = false
 }) => {
-  const [isLoading, setIsLoading] = useState(false);
+	const [isLoading, setIsLoading] = useState(false);
 
-  const handleClick = async () => {
-    setIsLoading(true);
-    try {
-      await onClick();
-    } finally {
-      setIsLoading(false);
-    }
-  };
+	const handleClick = async () => {
+		setIsLoading(true);
+		try {
+			await onClick();
+		} finally {
+			setIsLoading(false);
+		}
+	};
 
-  return (
-    <button
-      className={`button button--${variant} ${isLoading ? 'button--loading' : ''}`}
-      onClick={handleClick}
-      disabled={disabled || isLoading}
-    >
-      {isLoading ? 'Loading...' : label}
-    </button>
-  );
+	return (
+		<button
+			className={`button button--${variant} ${isLoading ? 'button--loading' : ''}`}
+			onClick={handleClick}
+			disabled={disabled || isLoading}
+		>
+			{isLoading ? 'Loading...' : label}
+		</button>
+	);
 };
 
 export default Button;
@@ -97,18 +93,18 @@ We can extract the loading logic into a custom hook:
 import { useState, useCallback } from 'react';
 
 export function useAsyncButton<T>(callback: () => Promise<T>) {
-  const [isLoading, setIsLoading] = useState(false);
+	const [isLoading, setIsLoading] = useState(false);
 
-  const handleClick = useCallback(async () => {
-    setIsLoading(true);
-    try {
-      await callback();
-    } finally {
-      setIsLoading(false);
-    }
-  }, [callback]);
+	const handleClick = useCallback(async () => {
+		setIsLoading(true);
+		try {
+			await callback();
+		} finally {
+			setIsLoading(false);
+		}
+	}, [callback]);
 
-  return { isLoading, handleClick };
+	return { isLoading, handleClick };
 }
 ```
 
@@ -119,29 +115,29 @@ import React from 'react';
 import { useAsyncButton } from './hooks';
 
 type ButtonProps = {
-  label: string;
-  onClick: () => Promise<void>;
-  variant?: 'primary' | 'secondary' | 'danger';
-  disabled?: boolean;
+	label: string;
+	onClick: () => Promise<void>;
+	variant?: 'primary' | 'secondary' | 'danger';
+	disabled?: boolean;
 };
 
 const Button: React.FC<ButtonProps> = ({
-  label,
-  onClick,
-  variant = 'primary',
-  disabled = false,
+	label,
+	onClick,
+	variant = 'primary',
+	disabled = false
 }) => {
-  const { isLoading, handleClick } = useAsyncButton(onClick);
+	const { isLoading, handleClick } = useAsyncButton(onClick);
 
-  return (
-    <button
-      className={`button button--${variant} ${isLoading ? 'button--loading' : ''}`}
-      onClick={handleClick}
-      disabled={disabled || isLoading}
-    >
-      {isLoading ? 'Loading...' : label}
-    </button>
-  );
+	return (
+		<button
+			className={`button button--${variant} ${isLoading ? 'button--loading' : ''}`}
+			onClick={handleClick}
+			disabled={disabled || isLoading}
+		>
+			{isLoading ? 'Loading...' : label}
+		</button>
+	);
 };
 
 export default Button;
