Trying to use typescript for react code highlighting

--- a/src/pages/blog/2024/02/nextjs-ssr-with-react-hook-form-not-found-issue.mdx
+++ b/src/pages/blog/2024/02/nextjs-ssr-with-react-hook-form-not-found-issue.mdx
@@ -28,7 +28,7 @@ The only way the button could be enabled is when the JavaScript was fully loaded
 
 Full code sample:
 
-```JSX
+```typescript
 'use client';
 import { useForm } from 'react-hook-form';
 import { useState, useEffect } from 'react';
