couple more blog post published

--- a/src/pages/blog/2023/12/my-journey-into-functional-programming-with-kotlin-and-svelte-kit.mdx
+++ b/src/pages/blog/2023/12/my-journey-into-functional-programming-with-kotlin-and-svelte-kit.mdx
@@ -2,13 +2,13 @@
 layout: ../../../../layouts/BlogLayout.astro
 title: 'My Journey into Functional Programming with Kotlin and Svelte Kit'
 date: December 10, 2023
-tags: ['Development']
-excerpt: 'Embarking on my journey into functional programming, I initially delved into Kotlin. Concurrently, I was acquainting myself with Svelte Kit by crafting a sim...'
+tags: ['svelte', 'typescript', 'fp-ts', 'functional programming']
+excerpt: 'Functional programming in Typescript with fp-ts and Svelte Kit.'
 ---
 
 Embarking on my journey into functional programming, I initially delved into
 [Kotlin](https://www.amazon.com.au/Functional-Programming-Kotlin-Marco-Vermeulen/dp/161729716X/ref=sr_1_3?crid=36ISJYEU4WJ5H&keywords=functional+programming+in+kotlin&qid=1702176794&sprefix=functional+programming+in+kotlin%2Caps%2C280&sr=8-3).
-Concurrently, I was learning Svelte Kit by building a 
+Concurrently, I was learning Svelte Kit by building a
 [simple Notes app.](https://github.com/dejanvasic85/post-it)
 Although the allure of using both languages was enticing, fate led me to
 discover the [fp-ts library](https://gcanti.github.io/fp-ts) for Node.js.
