Fixing the llayout ref

--- a/src/pages/blog/2023/11/asserting-either-in-vitest.mdx
+++ b/src/pages/blog/2023/11/asserting-either-in-vitest.mdx
@@ -1,5 +1,5 @@
 ---
-layout: ../../../layouts/BlogLayout.astro
+layout: ../../../../layouts/BlogLayout.astro
 title: 'Asserting Either in Vitest'
 date: November 11, 2023
 tags: ['vitest', 'typescript', 'fp-ts', 'functional programming']
