updating another post

--- a/src/pages/blog/2022/05/next-images-in-storybook.mdx
+++ b/src/pages/blog/2022/05/next-images-in-storybook.mdx
@@ -3,7 +3,7 @@ layout: ../../../../layouts/BlogLayout.astro
 title: 'Next Images in Storybook'
 date: May 8, 2022
 tags: ['nextjs', 'storybook', 'react']
-excerpt: 'The Image component is very much a key selling point for the Next framework. This is a must use for performance and user experience but a situation inevitabl...'
+excerpt: 'Displaying Nextjs Image component in Storybook'
 ---
 
 The [Image](https://nextjs.org/docs/api-reference/next/image) component is very much a key
