--- a/src/pages/blog/2022/02/query-graphql-in-nextjs-and-ssr-rehydration.mdx
+++ b/src/pages/blog/2022/02/query-graphql-in-nextjs-and-ssr-rehydration.mdx
@@ -1,9 +1,9 @@
 ---
-layout: ../../../layouts/BlogLayout.astro
-title: "Query GraphQL in Nextjs and SSR Rehydration"
+layout: ../../../../layouts/BlogLayout.astro
+title: 'Query GraphQL in Nextjs and SSR Rehydration'
 date: February 28, 2022
-tags: ["Development"]
-excerpt: "There are a bunch of articles on how to setup Apollo GraphQL in Nextjs and a github repository from NextJs docs. Great starting points particularly for query..."
+tags: ['graphql', 'apollo', 'nextjs', 'ssr']
+excerpt: 'SSR Data hydration and Querying GraphQL in Nextjs with Apollo'
 ---
 
 There are a bunch of articles on how to setup [Apollo GraphQL in Nextjs](https://www.apollographql.com/blog/apollo-client/next-js/next-js-getting-started/) and a github repository from [NextJs docs](https://github.com/vercel/next.js/tree/canary/examples/with-apollo). Great starting points particularly for querying an API that is hosted externally to our App. The docs were not so generous however with describing how to accomplish server side rendering and performing query once on the server.
@@ -14,7 +14,7 @@ The data needs to make its way to the client on initial render and there are a c
 
 Let's say that we have the following component that makes use of \`useQuery\` from Apollo. Without cache hydration, the component render would run on the server and the client producing multiple queries to the backend.
 
-```
+```typescript
 import React from 'react';
 import { useQuery } from '@apollo/client';
 
@@ -22,7 +22,7 @@ import { USER_PROFILE } from './queries';
 
 const UserProfile = () => {
   const { data, loading } = useQuery(USER_PROFILE);
-  
+
   if (loading) {
       return <div>loading...</div>;
    }
@@ -33,9 +33,9 @@ const UserProfile = () => {
 
 ### Apollo provider
 
-In Nextjs we need to setup the Apollo provider. We do that in the root \`\_app.tsx\` component with the apolloCache passed down as a page prop:
+In Nextjs we need to setup the Apollo provider. We do that in the root `\_app.tsx` component with the apolloCache passed down as a page prop:
 
-```
+```typescript
 export default function MyApp({ Component, pageProps, props }): JSX.Element {
   const apolloClient = useApollo({ initialCache: pageProps.apolloCache });
   const getLayout = Component.getLayout ?? getDefaultLayout;
@@ -52,50 +52,49 @@ export default function MyApp({ Component, pageProps, props }): JSX.Element {
 
 The useApollo function is a custom hook that is responsible for creating the Apollo client that will be used for either server or browser. Function can be found here:
 
-```
+```typescript
 import { useMemo } from 'react';
 import { ApolloClient, NormalizedCacheObject, InMemoryCache } from '@apollo/client';
 
 interface Props {
-  initialCache: NormalizedCacheObject;
+	initialCache: NormalizedCacheObject;
 }
 
 let _cachedClient: ApolloClient<NormalizedCacheObject>;
 
 const getOrCreateApolloClient = ({ initialCache }: Props) => {
-  if (_cachedClient) {
-    if (initialCache) {
-      _cachedClient.cache.restore(initialCache);
-    }
+	if (_cachedClient) {
+		if (initialCache) {
+			_cachedClient.cache.restore(initialCache);
+		}
 
-    return _cachedClient;
-  }
+		return _cachedClient;
+	}
 
-  _cachedClient = new ApolloClient<NormalizedCacheObject>({
-    cache: new InMemoryCache(),
-    credentials: 'same-origin',
-    uri: '/api/graphql',
-  });
+	_cachedClient = new ApolloClient<NormalizedCacheObject>({
+		cache: new InMemoryCache(),
+		credentials: 'same-origin',
+		uri: '/api/graphql'
+	});
 
-  _cachedClient.cache.restore(initialCache);
-  return _cachedClient;
+	_cachedClient.cache.restore(initialCache);
+	return _cachedClient;
 };
 
 export default function useApollo({ initialCache }: Props) {
-  const client = useMemo(() => getOrCreateApolloClient({ initialCache }), [initialCache]);
+	const client = useMemo(() => getOrCreateApolloClient({ initialCache }), [initialCache]);
 
-  return client;
+	return client;
 }
 ```
 
-The uri \`/api/graphql\` is the relative url configured for GraphQL server running within the same App.
+The uri `/api/graphql` is the relative url configured for GraphQL server running within the same App.
 
 ### NextJS Page
 
 Here's NextJS page app with getServerSideProps method preparing the apolloCache:
 
-```
-
+```typescript
 const UserProfilePage = ({ errorCode, ...restProps }) => {
   if (errorCode) {
     return <Error statusCode={errorCode} />;
@@ -128,37 +127,34 @@ export default UserProfilePage;
 
 ### Apollo client for the server
 
-The call to creating the Apollo client on the server is important for querying database resources. Since the schema and methods are located locally we can make use of the 
-```
-makeExecutableSchema
-```
- method from graphQL tools and pass in the schema and resolvers.
+The call to creating the Apollo client on the server is important for querying database resources.
+Since the schema and methods are located locally we can make use of the `makeExecutableSchema` method from
+graphQL tools and pass in the schema and resolvers.
 
 This was the missing piece for me when searching for solutions online.
 
-```
+```typescript
 export async function createServerApolloClient({
-  context
+	context
 }: {
-  context: GetServerSidePropsContext;
+	context: GetServerSidePropsContext;
 }): Promise<ApolloClient<NormalizedCacheObject>> {
+	const schema = makeExecutableSchema({ typeDefs, resolvers });
 
-  const schema = makeExecutableSchema({ typeDefs, resolvers });
-
-  return new ApolloClient<NormalizedCacheObject>({
-    link: new SchemaLink({
-      schema,
-      context: (): ApiContext => {
-        return { db, config };
-      },
-    }),
-    ssrMode: true,
-    cache: new InMemoryCache(),
-  });
+	return new ApolloClient<NormalizedCacheObject>({
+		link: new SchemaLink({
+			schema,
+			context: (): ApiContext => {
+				return { db, config };
+			}
+		}),
+		ssrMode: true,
+		cache: new InMemoryCache()
+	});
 }
-
 ```
 
-Other resources including the article [from Kellen Mace](https://developers.wpengine.com/blog/apollo-client-cache-rehydration-in-next-js) is really useful for querying remote API's externally to our Next App.
+Other resources including the article [from Kellen Mace](https://developers.wpengine.com/blog/apollo-client-cache-rehydration-in-next-js)
+is really useful for querying remote API's externally to our Next App.
 
 Hopefully this article can help you and fill the gap on querying from the same server.
