Fixing the relative imports for the blog posts

--- a/data/02/angularjs-password-strength-indicator.mdx
+++ b/data/02/angularjs-password-strength-indicator.mdx
@@ -1,5 +1,5 @@
 ---
-layout: ../../../layouts/BlogLayout.astro
+layout: ../../../../layouts/BlogLayout.astro
 title: "AngularJs Password Strength Indicator with Bootstrap"
 date: February 7, 2015
 tags: ["Development"]
