--- a/data/2016/07/abstracting-session-data-with-custom-lifetime-managers.mdx
+++ b/data/2016/07/abstracting-session-data-with-custom-lifetime-managers.mdx
@@ -1,5 +1,5 @@
 ---
-layout: ../../../layouts/BlogLayout.astro
+layout: ../../../../layouts/BlogLayout.astro
 title: 'Abstracting session data with custom lifetime managers'
 date: July 10, 2016
 tags: ['.Net', 'ASP.Net']
