--- a/data/2016/09/selenium-webelement-to-middle-of-page.mdx
+++ b/data/2016/09/selenium-webelement-to-middle-of-page.mdx
@@ -1,5 +1,5 @@
 ---
-layout: ../../../layouts/BlogLayout.astro
+layout: ../../../../layouts/BlogLayout.astro
 title: "Selenium WebElement to middle of page"
 date: September 26, 2016
 tags: ["Development"]
