--- a/data/2017/07/google-map-geocomplete-with-selenium.mdx
+++ b/data/2017/07/google-map-geocomplete-with-selenium.mdx
@@ -1,5 +1,5 @@
 ---
-layout: ../../../layouts/BlogLayout.astro
+layout: ../../../../layouts/BlogLayout.astro
 title: "Google Map GeoComplete with Selenium"
 date: July 31, 2017
 tags: ["Development"]
