--- a/data/2018/01/from-net-on-premise-to-node-in-the-cloud.mdx
+++ b/data/2018/01/from-net-on-premise-to-node-in-the-cloud.mdx
@@ -1,5 +1,5 @@
 ---
-layout: ../../../layouts/BlogLayout.astro
+layout: ../../../../layouts/BlogLayout.astro
 title: "From .Net On-Premise to Node in the Cloud"
 date: January 3, 2018
 tags: [".Net","aws","cloud-hosting","docker","Hosting","Node","Software Development","terraform","Windows"]
