--- a/data/2018/04/node-on-docker-using-aws-fargate.mdx
+++ b/data/2018/04/node-on-docker-using-aws-fargate.mdx
@@ -1,5 +1,5 @@
 ---
-layout: ../../../layouts/BlogLayout.astro
+layout: ../../../../layouts/BlogLayout.astro
 title: "Node on Docker using AWS Fargate"
 date: April 1, 2018
 tags: ["aws","Continuous Delivery","Continuous Integration","docker","expressjs","fargate","Node","travis","typescript"]
