--- a/data/2019/11/golang-logging-with-correlation-id.mdx
+++ b/data/2019/11/golang-logging-with-correlation-id.mdx
@@ -1,5 +1,5 @@
 ---
-layout: ../../../layouts/BlogLayout.astro
+layout: ../../../../layouts/BlogLayout.astro
 title: "GoLang api logging with correlation ID"
 date: November 1, 2019
 tags: ["API","BestPractices","CorrelationID","Golang","Logging","Microservicea","RequestID"]
