--- a/data/2019/11/managing-postgres-database-locally-with-docker.mdx
+++ b/data/2019/11/managing-postgres-database-locally-with-docker.mdx
@@ -1,5 +1,5 @@
 ---
-layout: ../../../layouts/BlogLayout.astro
+layout: ../../../../layouts/BlogLayout.astro
 title: "Managing Postgres database locally with Docker"
 date: November 7, 2019
 tags: ["development","docker","Postgres"]
