--- a/data/2020/01/unit-of-work-with-node-mssql-and-typescript.mdx
+++ b/data/2020/01/unit-of-work-with-node-mssql-and-typescript.mdx
@@ -1,5 +1,5 @@
 ---
-layout: ../../../layouts/BlogLayout.astro
+layout: ../../../../layouts/BlogLayout.astro
 title: "Unit of work with node mssql and typescript"
 date: January 3, 2020
 tags: ["JavaScript","javascript","lambda","Node","typescript","unitofwork"]
