--- a/data/2020/01/ynab-you-really-do-need-a-budget.mdx
+++ b/data/2020/01/ynab-you-really-do-need-a-budget.mdx
@@ -1,5 +1,5 @@
 ---
-layout: ../../../layouts/BlogLayout.astro
+layout: ../../../../layouts/BlogLayout.astro
 title: "YNAB You really do need a budget"
 date: January 15, 2020
 tags: ["API","Banks","Budgeting","Finance","software","YNAB"]
