--- a/data/2020/04/sequelize-5-with-typescript.mdx
+++ b/data/2020/04/sequelize-5-with-typescript.mdx
@@ -1,5 +1,5 @@
 ---
-layout: ../../../layouts/BlogLayout.astro
+layout: ../../../../layouts/BlogLayout.astro
 title: "Sequelize 5 with Typescript"
 date: April 5, 2020
 tags: ["JavaScript","Postgres","Sequelize","typescript"]
