--- a/data/2020/06/circleci-and-heroku-orb.mdx
+++ b/data/2020/06/circleci-and-heroku-orb.mdx
@@ -1,5 +1,5 @@
 ---
-layout: ../../../layouts/BlogLayout.astro
+layout: ../../../../layouts/BlogLayout.astro
 title: "CircleCi and Heroku Orb"
 date: June 23, 2020
 tags: ["buildnumber","circleci","Continuous Delivery","heroku"]
