--- a/data/2020/06/react-typescript-and-ant-design.mdx
+++ b/data/2020/06/react-typescript-and-ant-design.mdx
@@ -1,5 +1,5 @@
 ---
-layout: ../../../layouts/BlogLayout.astro
+layout: ../../../../layouts/BlogLayout.astro
 title: "React Typescript and Ant Design"
 date: June 5, 2020
 tags: ["ant-design","antdesign","boilerplate","react","template","theming","typescript","webpack"]
