--- a/data/2020/08/serving-react-spa-in-koa.mdx
+++ b/data/2020/08/serving-react-spa-in-koa.mdx
@@ -1,5 +1,5 @@
 ---
-layout: ../../../layouts/BlogLayout.astro
+layout: ../../../../layouts/BlogLayout.astro
 title: "Serving React SPA in Koa"
 date: August 22, 2020
 tags: ["react"]
