--- a/data/2020/09/ant-design-upload-to-s3-bucket-and-graphql.mdx
+++ b/data/2020/09/ant-design-upload-to-s3-bucket-and-graphql.mdx
@@ -1,5 +1,5 @@
 ---
-layout: ../../../layouts/BlogLayout.astro
+layout: ../../../../layouts/BlogLayout.astro
 title: "Ant Design Upload to S3 Bucket and GraphQL"
 date: September 10, 2020
 tags: ["ant-design","aws","graphql","react","s3"]
