--- a/data/2020/12/ant-design-async-validation.mdx
+++ b/data/2020/12/ant-design-async-validation.mdx
@@ -1,5 +1,5 @@
 ---
-layout: ../../../layouts/BlogLayout.astro
+layout: ../../../../layouts/BlogLayout.astro
 title: "Ant Design Async Input Validation"
 date: December 21, 2020
 tags: ["ant-design","forms","graphql","react","server-side-validation","validation"]
