--- a/data/2019/01/paging-in-postgres-and-java.mdx
+++ b/data/2019/01/paging-in-postgres-and-java.mdx
@@ -1,5 +1,5 @@
 ---
-layout: ../../../layouts/BlogLayout.astro
+layout: ../../../../layouts/BlogLayout.astro
 title: "Paging in Postgres and Java"
 date: January 3, 2019
 tags: ["Java","paging","Postgres"]
