--- a/src/pages/blog/2019/11/golang-logging-with-correlation-id.mdx
+++ b/src/pages/blog/2019/11/golang-logging-with-correlation-id.mdx
@@ -1,20 +1,24 @@
 ---
 layout: ../../../../layouts/BlogLayout.astro
-title: "GoLang api logging with correlation ID"
+title: 'GoLang api logging with correlation ID'
 date: November 1, 2019
-tags: ["API","BestPractices","CorrelationID","Golang","Logging","Microservicea","RequestID"]
-excerpt: "The ability to correlate Logs during an API request can be of utter importance in large traffic applications. It provides easier diagnoses for issues and esp..."
+tags: ['API', 'BestPractices', 'CorrelationID', 'Golang', 'Logging', 'Microservicea', 'RequestID']
+excerpt: 'Correlating API logs in Go using correlation/request IDs for better traceability.'
 ---
 
-The ability to correlate Logs during an API request can be of utter importance in large traffic applications. It provides easier diagnoses for issues and especially across applications (micro services) managed by different teams.
+The ability to correlate Logs during an API request can be of utter importance in large traffic applications.
+It provides easier diagnoses for issues and especially across applications (micro services) managed by different teams.
 
-Generally the way we correlate requests is by using 'Correlation-ID' or 'X-Request-Id' or anything else that is a binding contract between teams and usually passed in by headers in the shape of a GUID.
+Generally the way we correlate requests is by using 'Correlation-ID' or 'X-Request-Id' or
+anything else that is a binding contract between teams and usually passed in by headers in the shape of a GUID.
 
-There are various parts of the application that make a lot of sense to have logs. That in itself is probably another topic. But a good pattern is to log in different layers of the application like a security later, request entry, validation, business operation and so on.
+There are various parts of the application that make a lot of sense to have logs. That in itself is
+probably another topic. But a good pattern is to log in different layers of the application like a
+security layer, request entry, validation, business operation and so on.
 
 Here we have a very simple API with an endpoint to fetch users and log some stuff along the way:
 
-```
+```go
 package main
 
 import (
@@ -65,7 +69,7 @@ func main() {
 
 Once we call the users endpoints with "foo" we get this output:
 
-```
+```sh
 $ go run .
 time="2019-11-01T21:52:49+11:00" level=info msg="Starting server on port 9001"
 time="2019-11-01T21:53:48+11:00" level=info msg="Fetching user foo"
@@ -74,11 +78,12 @@ time="2019-11-01T21:53:48+11:00" level=info msg="Found user Mister Fooooo"
 
 In this instance I'm using logrus for the logger but it can be easily replaced.
 
-So this is all cool when the API is single threaded because the logs will be in sequential order and then we can see all the events and trace the sequence of actions in that request.
+So this is all cool when the API is single threaded because the logs will be in sequential
+order and then we can see all the events and trace the sequence of actions in that request.
 
 In reality, however; our logs will probably look like this instead (regardless of language platform given the nature of Api's):
 
-```
+```sh
 time="2019-11-01T21:53:48+11:00" level=info msg="Fetching user foo"
 time="2019-11-01T21:53:48+11:00" level=info msg="Fetching user bar"
 time="2019-11-01T21:53:48+11:00" level=info msg="Fetching user foo"
@@ -87,24 +92,29 @@ time="2019-11-01T21:53:48+11:00" level=info msg="Found user Mister Fooooo"
 time="2019-11-01T21:53:48+11:00" level=info msg="Found user Mister bar"
 ```
 
-Logs are now all our of order. Many log aggregation tools like splunk or sumo allow us to search these entries but we need to identify them somehow. Enter Correlation ID.
+Logs are now all our of order. Many log aggregation tools like splunk or sumo allow us to search these
+entries but we need to identify them somehow. Enter Correlation ID.
 
-At this point as a GoLang newbie, I was left scratching my head. Usually, I would solve this problem in .Net using dependency injection to get the current Logger (per request) and using middleware to read the header and set the correlation ID for this logger. Then in all the other controllers and services that need to log anything, the correlation ID would be logged with it as an additional field.
+At this point as a GoLang newbie, I was left scratching my head. Usually, I would solve this problem in 
+.Net using dependency injection to get the current Logger (per request) and using middleware to read the 
+header and set the correlation ID for this logger. Then in all the other controllers and services that 
+need to log anything, the correlation ID would be logged with it as an additional field.
 
 > With Gorilla mux in golang, I haven't seen dependency injection or at least in the same way to resolve controllers and their dependencies. Wait, there ARE no controllers.
-> 
+>
 > [Tweet](http://twitter.com/share?&text=With%20Gorilla%20mux%20in%20golang%2C%20I%20haven't%20seen%20dependency%20injection%20or%20at%20least%20in%20the%20same%20way%20to%20resolve%20controllers%20and%20their%20dependencies.%20Wait%2C%20there%20ARE%20no%20controllers.%20&url=https://dejanvasic.wordpress.com/2019/11/01/golang-logging-with-correlation-id/)
 
 That's ok. We'll do with what we have.
 
-*   [Middleware](https://github.com/gorilla/mux#middleware)
-*   [Golang Context](https://golang.org/pkg/context/)
-*   [Logrus](https://github.com/sirupsen/logrus) fields - yes it does use some nifty logrus features
-*   Dependency Injection - Might come back to this later. Haven't figured it out yet.
+- [Middleware](https://github.com/gorilla/mux#middleware)
+- [Golang Context](https://golang.org/pkg/context/)
+- [Logrus](https://github.com/sirupsen/logrus) fields - yes it does use some nifty logrus features
+- Dependency Injection - Might come back to this later. Haven't figured it out yet.
 
-First, middleware will be executed before the handler to read the correlation ID and set it in to the context. Let's do that first. _Excuse the naughty magic strings everywhere._
+First, middleware will be executed before the handler to read the correlation ID and set it in to the 
+context. Let's do that first. _Excuse the naughty magic strings everywhere._
 
-```
+```go
 func CorrelationMiddleware(next http.Handler) http.Handler {
 	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		id := r.Header.Get("Correlation-ID")
@@ -116,7 +126,7 @@ func CorrelationMiddleware(next http.Handler) http.Handler {
 
 And make sure to add it to the main function:
 
-```
+```go
 func main() {
 	r := mux.NewRouter()
 
@@ -129,13 +139,13 @@ func main() {
 
 ```
 
-At this point, we the correlation ID ready in the context for subsequent handlers / middleware. So we could easily read it out every time we need to log and append it at the start or end of our logs. But we can do one better than that. Logrus logger has a nice 
-```
-WithFields
-```
- method that creates an entry. This instance can be stored on the context as well or even just replace the correlation ID entry. So it becomes like this:
+At this point, we the correlation ID ready in the context for subsequent handlers / middleware.
+So we could easily read it out every time we need to log and append it at the start or end of our logs.
+But we can do one better than that. Logrus logger has a nice `WithFields`
+method that creates an entry. This instance can be stored on the context as well or even
+just replace the correlation ID entry. So it becomes like this:
 
-```
+```go
 func CorrelationMiddleware(next http.Handler) http.Handler {
 	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		id := r.Header.Get("Correlation-ID")
@@ -148,17 +158,10 @@ func CorrelationMiddleware(next http.Handler) http.Handler {
 }
 ```
 
-So in our handlers we can now fetch the 
-```
-RequestLogger
-```
- from our context instead of calling 
-```
-Log
-```
- directly. Our handler is updated to look like this:
+So in our handlers we can now fetch the `RequestLogger` from our context instead of calling
+`Log` directly. Our handler is updated to look like this:
 
-```
+```go
 func HandleGetUser(w http.ResponseWriter, r *http.Request) {
 	logger := r.Context().Value("RequestLogger").(*log.Entry)
 	params := mux.Vars(r)
@@ -185,15 +188,20 @@ func HandleGetUser(w http.ResponseWriter, r *http.Request) {
 
 And the output?
 
-```
+```sh
 time="2019-11-01T22:57:51+11:00" level=info msg="Fetching user foo" correlationID=111
 time="2019-11-01T22:57:54+11:00" level=info msg="Fetching user foo" correlationID=222
 time="2019-11-01T22:57:54+11:00" level=info msg="Found user Mister Fooooo" correlationID=222
 time="2019-11-01T22:57:51+11:00" level=info msg="Found user Mister Fooooo" correlationID=111
 ```
 
-Whenever we fetch the logger from the context we will have any fields associated to the logger up to that point. We could also add things like App Version, App Name, request method, endpoint name etc etc.
+Whenever we fetch the logger from the context we will have any fields associated to the
+logger up to that point. We could also add things like App Version, App Name, request method, endpoint name etc etc.
 
-[Logrus](https://github.com/sirupsen/logrus) is the only library I have explored in my miniscule time looking at golang but it does have support for JSON logs along with many other features.
+[Logrus](https://github.com/sirupsen/logrus) is the only library I have explored in my
+miniscule time looking at golang but it does have support for JSON logs along with many other features.
 
-One thing I would like to explore next is the possibility of using dependency injection to resolve a logger instead of fetching from the context on every handler entry. This would also help a lot if another dependency in the request call stack needs to log something. It would save us from passing it as an argument. Hope this all makes sense. I definitely learned something from it.
+One thing I would like to explore next is the possibility of using dependency injection to
+resolve a logger instead of fetching from the context on every handler entry.
+This would also help a lot if another dependency in the request call stack needs to log something.
+It would save us from passing it as an argument. Hope this all makes sense. I definitely learned something from it.
