--- a/src/pages/blog/2020/09/ant-design-upload-to-s3-bucket-and-graphql.mdx
+++ b/src/pages/blog/2020/09/ant-design-upload-to-s3-bucket-and-graphql.mdx
@@ -3,22 +3,25 @@ layout: ../../../../layouts/BlogLayout.astro
 title: "Ant Design Upload to S3 Bucket and GraphQL"
 date: September 10, 2020
 tags: ["ant-design","aws","graphql","react","s3"]
-excerpt: "Ant Design's Upload component is packed full of features. When it comes to uploading to an AWS S3 bucket using a signed request, there's obvious lack of docu..."
+excerpt: "How to use Ant Design's Upload component to upload files to AWS S3 with GraphQL and signed URLs."
 ---
 
-Ant Design's Upload component is packed full of features. When it comes to uploading to an AWS S3 bucket using a signed request, there's obvious lack of documentation on how to achieve this.
+Ant Design's Upload component is packed full of features. When it comes to uploading to an AWS 
+S3 bucket using a signed request, there's obvious lack of documentation on how to achieve this.
 
-There's definitely a few approaches available but I found the easiest route is to use the Signed Request URL form S3.
+There's definitely a few approaches available but I found the easiest route is to use the 
+Signed Request URL form S3.
 
 The flow:
 
 ![](https://dejanvasic.wordpress.com/wp-content/uploads/2020/09/image.png?w=422)
 
-First we need to get a signed URL for the action from the S3 bucket, then upload the file to that endpoint. Once completed, we should update the affected record in the API / database.
+First we need to get a signed URL for the action from the S3 bucket, then upload the file to that 
+endpoint. Once completed, we should update the affected record in the API / database.
 
 Here's the final component with explanatory comments on how it all hangs together.
 
-```
+```typescript
 import React, { useState } from 'react';
 import { useMutation } from '@apollo/client';
 import { Upload, message, notification } from 'antd';
@@ -133,5 +136,3 @@ const ProfilePic = ({ id, currentImgUrl, updatePicture }: Props) => {
   );
 };
 export default ProfilePic;
-
-```
