Updating some old posts

--- a/src/pages/blog/2019/01/paging-in-postgres-and-java.mdx
+++ b/src/pages/blog/2019/01/paging-in-postgres-and-java.mdx
@@ -3,7 +3,7 @@ layout: ../../../../layouts/BlogLayout.astro
 title: 'Paging in Postgres and Java'
 date: January 3, 2019
 tags: ['postgres', 'paging', 'java']
-excerpt: ''
+excerpt: 'Paging is a common problem in large datasets. Here is a simple solution using Postgres and Java.'
 ---
 
 I am not a Postgres expert by any means. It has been a good 6 months of using what I think are the basics
