Adding some more tags for koa spa blog post

--- a/src/pages/blog/2020/08/serving-react-spa-in-koa.mdx
+++ b/src/pages/blog/2020/08/serving-react-spa-in-koa.mdx
@@ -2,7 +2,7 @@
 layout: ../../../../layouts/BlogLayout.astro
 title: 'Serving React SPA in Koa'
 date: August 22, 2020
-tags: ['react']
+tags: ['react', 'koa', 'spa', 'graphql']
 excerpt: 'Serving a React SPA and static sites with Koa and handling client-side routing.'
 ---
 
