typo in blog post

--- a/src/pages/blog/2025/06/displaying-toast-messages-in-svelte-5.mdx
+++ b/src/pages/blog/2025/06/displaying-toast-messages-in-svelte-5.mdx
@@ -104,7 +104,7 @@ It combines the benefits of type safety and ease of use, making it a powerful to
 
 ## Conclusion
 
-After reading this, there are not many excuses to continoue using `any` in your TypeScript tests.
+After reading this, there are not many excuses to continue using `any` in your TypeScript tests.
 
 Looking at that last example above, there is not a lot of boilerplate code to create a data fixture. So stop using `any`
 and start using data fixtures to create valid test data. This will help you write better tests, catch more bugs, and
