--- a/src/pages/blog/2021/08/epic-react-course-key-takeaways.mdx
+++ b/src/pages/blog/2021/08/epic-react-course-key-takeaways.mdx
@@ -3,7 +3,7 @@ layout: ../../../../layouts/BlogLayout.astro
 title: 'Epic react course key takeaways - useState lazy load and react hook flow'
 date: August 23, 2021
 tags: ['react', 'react-hooks', 'education']
-excerpt: "Learning react hooks and patterns from Kent C Dodds Epic React course"
+excerpt: 'Learning react hooks and patterns from Kent C Dodds Epic React course'
 ---
 
 About a month ago I've started to slowly chip away at [Kent C Dodds Epic React course](https://epicreact.dev/learn),
